--- a/firstPyTest.ipynb
+++ b/firstPyTest.ipynb
@@ -293,7 +293,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Please insert amount of sticks or it will be 10 by default 10\n",
@@ -309,7 +309,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 3\n"
@@ -323,7 +323,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 2\n"
@@ -337,7 +337,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 3\n"
@@ -351,7 +351,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 33\n"
@@ -366,7 +366,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 3\n"
@@ -381,7 +381,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 3\n"
@@ -396,7 +396,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 3\n"
@@ -411,7 +411,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 3\n"
@@ -426,7 +426,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 33\n"
@@ -441,7 +441,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 3\n"
@@ -456,7 +456,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 3\n"
@@ -471,7 +471,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 3\n"
@@ -486,7 +486,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 33\n"
@@ -501,7 +501,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 33\n"
@@ -516,7 +516,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? \n"
@@ -531,7 +531,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 3\n"
@@ -546,7 +546,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 3\n"
@@ -561,7 +561,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 333\n"
@@ -576,7 +576,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "2 how many sticks will you take? 2\n"
@@ -1132,7 +1132,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Enter any num... fd\n"
@@ -1146,7 +1146,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Enter any num... ee\n"
@@ -1160,7 +1160,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Enter any num... 3\n"
@@ -2414,7 +2414,7 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "please enter player1 name, or it will be player1 j\n",
@@ -2546,7 +2546,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Enter name for player 1 (default: player1):  Alex\n",
@@ -2566,7 +2566,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Choose position (0-8):  8\n"
@@ -2585,7 +2585,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Choose position (0-8):  4\n"
@@ -2604,7 +2604,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Choose position (0-8):  6\n"
@@ -2623,7 +2623,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Choose position (0-8):  2\n"
@@ -2642,7 +2642,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "Choose position (0-8):  7\n"
@@ -2699,7 +2699,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "ipdb>  x\n"
@@ -2713,7 +2713,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "ipdb>  y\n"
@@ -2727,7 +2727,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "ipdb>  c\n"
@@ -2749,7 +2749,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "ipdb>  z\n"
@@ -2763,7 +2763,7 @@
      ]
     },
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
       "ipdb>  c\n"
@@ -3730,7 +3730,7 @@
   {
    "cell_type": "code",
    "execution_count": 430,
-   "id": "abb9ea8d",
+   "id": "2917a82f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4341,7 +4341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#permutations"
+    "#permutations - generate different combinations from provided list"
    ]
   },
   {
@@ -4351,15 +4351,398 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#product"
+    "#product - rematch all elements of twio lists between each other"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1a9d71f-4721-4588-9ce7-5a6500a3298f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Introspection - mechanism that help us analyze data about objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97f7b710-13c5-4e75-8253-a78e06d9311b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# With all objects we can call method __doc__ - whitch will return string with description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 511,
+   "id": "2d28e5a8-ebd4-4648-ac22-1d9efa0241aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Return whether 'cls' is derived from another class or is the same class.\n",
+      "\n",
+      "A tuple, as in ``issubclass(x, (A, B, ...))``, may be given as the target to\n",
+      "check against. This is equivalent to ``issubclass(x, A) or issubclass(x, B)\n",
+      "or ...``.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(issubclass.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 513,
+   "id": "3dff49be-9ad4-4a4d-a359-0777bd3041cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Shape:\n",
+    "    pass\n",
+    "\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "\n",
+    "\n",
+    "circle = Circle(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 517,
+   "id": "30e0cb66-98cb-4bc9-93da-3675bd815070",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(issubclass(Circle, Shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 519,
+   "id": "dcc394c0-1f9b-48a3-9c89-bf5fd2eb938c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(isinstance(circle, Circle))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 521,
+   "id": "0250fb96-d100-431f-87e0-06eb79f1c162",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(callable(circle))# but if we will define __call__() method it will appears callable\n",
+    "print(callable(print))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 529,
+   "id": "f2d7e319-28a2-4d24-9f9c-cb211dbcb9cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "if hasattr(circle,'radius'):\n",
+    "    print(getattr(circle, 'radius'))\n",
+    "    setattr(circle, 'radius',20)\n",
+    "    print(getattr(circle, 'radius'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 531,
+   "id": "e6d5c49c-e2b2-429d-8d2c-6f2218bb7531",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'radius']"
+      ]
+     },
+     "execution_count": 531,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(circle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 533,
+   "id": "4ec7b479-376c-4cc3-a0ee-387e8a0be442",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Circle'"
+      ]
+     },
+     "execution_count": 533,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Circle.__name__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 561,
+   "id": "a2a53155-9b3b-4784-a0bd-e6458f09be4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Requests Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 575,
+   "id": "b43fdaf0-d145-438f-8b90-0af02964d783",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests as req"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 577,
+   "id": "c0002ce6-f0d9-4b53-a2df-8a03af380df5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 577,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = req.get(\"https://stankadyrov.com/\")\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 578,
+   "id": "75511337-bacb-486a-85ba-3cbf52d3ece8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Works\n"
+     ]
+    }
+   ],
+   "source": [
+    "if res:\n",
+    "    print('Works')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 581,
+   "id": "ea5404f1-04df-4592-923c-034cb4a53d86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All is good\n",
+      "Unknown err: HTTPSConnectionPool(host='stankadccyrov.com', port=443): Max retries exceeded with url: / (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x15aaed550>: Failed to resolve 'stankadccyrov.com' ([Errno 8] nodename nor servname provided, or not known)\"))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from requests import HTTPError\n",
+    "\n",
+    "for url in [\"https://stankadyrov.com/\", \"https://stankadccyrov.com\"]:\n",
+    "    try:\n",
+    "        res = req.get(url)\n",
+    "        res.raise_for_status()\n",
+    "    except HTTPError as http_err:\n",
+    "        print(f'Err:{http_err}')\n",
+    "    except Exception as err:\n",
+    "        print(f'Unknown err: {err}')\n",
+    "    else:\n",
+    "        print('All is good')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 582,
+   "id": "3a7a0e50-2e9d-4e53-a7b3-c53ed410467a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Sessions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 589,
+   "id": "7cc7f265-b0c3-466c-99ff-1c134ffa7fa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Content-Type': 'text/html', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'Date': 'Mon, 21 Apr 2025 20:53:03 GMT', 'Last-Modified': 'Fri, 13 Sep 2024 12:52:08 GMT', 'Content-Encoding': 'br', 'x-amz-server-side-encryption': 'AES256', 'Server': 'AmazonS3', 'ETag': 'W/\"c218a26179f1b477764a13e8d6d9a04e\"', 'Vary': 'accept-encoding', 'X-Cache': 'Error from cloudfront', 'Via': '1.1 07b1d101035e34f82920833b00a4e896.cloudfront.net (CloudFront)', 'X-Amz-Cf-Pop': 'ARN53-P2', 'X-Amz-Cf-Id': 'kpnt9O4-GGcPMTY-rR3hcbqBEEpFYMyjn4Is-UlIylB03KX133x75A==', 'Age': '1331'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with req.Session() as session:\n",
+    "    res = session.get(\"https://stankadyrov.com/\") #we're opening session whitch will be active till we will go out of with\n",
+    "\n",
+    "print(res.headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 591,
+   "id": "4aea5377-8c4c-4974-bba2-2804b90340cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from requests.adapters import HTTPAdapter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 593,
+   "id": "eecd6b6a-087a-4b5a-ad60-d97b87274012",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adpt = HTTPAdapter(max_retries=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 595,
+   "id": "bb55a828-9ef2-436b-af57-0c955f1d766d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1572705141.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[595], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    except: ConnectionError as err:\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "with req.Session() as session:\n",
+    "    session.mount(\"https://stankadyrov.com/\", adpt)\n",
+    "    try:\n",
+    "     res = session.get(\"https://stankadyrov.com/\")\n",
+    "    except ConnectionError as err:\n",
+    "        print(f'failed with {err}')\n",
+    "else:\n",
+    "     print('All is good')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3153d62-09d6-4243-a49c-2a3c9c7e0a61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4371,7 +4754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
