--- a/learnPyBookTasks.ipynb
+++ b/learnPyBookTasks.ipynb
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 343,
    "id": "8dbb1117-5846-4986-9113-5f80290249f9",
    "metadata": {},
    "outputs": [
@@ -978,21 +978,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Please specify ingredient, or press q+enter to stop:  apple\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Item was added.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Please specify ingredient, or press q+enter to stop:  pineapple\n"
+      "Please specify ingredient, or press q+enter to stop:  c\n"
      ]
     },
     {
@@ -1013,7 +999,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ingredients you added: ['apple', 'pineapple']\n"
+      "Ingredients you added: ['c']\n"
      ]
     }
    ],
@@ -1032,16 +1018,459 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 345,
    "id": "fd65ef87-c8e5-4fdb-a243-c6be7856972f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#7.8 Sandwiches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "id": "9b2ee5da-4ce9-4c35-b51d-1d156d4a0184",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we run out of pastrami for today, sorry\n",
+      "turkey was prepared\n",
+      "butter was prepared\n",
+      "turkey was prepared\n",
+      "cheezzzy was prepared\n",
+      "all sandwiches have been prepared: ['turkey', 'butter', 'turkey', 'cheezzzy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sandwich_orders = ['pastrami', 'turkey', 'butter', 'turkey', 'cheezzzy', 'pastrami']\n",
+    "\n",
+    "prepared_sandwiches = []\n",
+    "\n",
+    "while 'pastrami' in sandwich_orders:\n",
+    "    sandwich_orders.remove('pastrami')\n",
+    "\n",
+    "print('we run out of pastrami for today, sorry')\n",
+    "\n",
+    "for snw in sandwich_orders[:]:\n",
+    "    \n",
+    "    prepared_sandwiches.append(snw)\n",
+    "    sandwich_orders.remove(snw)\n",
+    "    print(f'{snw} was prepared')\n",
+    "print(f'all sandwiches have been prepared: {prepared_sandwiches}')\n",
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b2ee5da-4ce9-4c35-b51d-1d156d4a0184",
+   "id": "eee4a7fe-266a-4848-bb51-bcf9222420a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#8 Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "id": "2562533a-c934-4722-8cff-b0be33b31fe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey, we are testing functions\n"
+     ]
+    }
+   ],
+   "source": [
+    "def display_msg(msg):\n",
+    "    print(msg)\n",
+    "\n",
+    "display_msg('Hey, we are testing functions')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
+   "id": "c19579a8-488e-4a3e-93a6-00b5da3d7598",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you will get M size tshirt with text: HEY DUMMY\n",
+      "you will get HEY DUMMY size tshirt with text: M\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_tshirt(size, text):\n",
+    "    print(f'you will get {size} size tshirt with text: {text}')\n",
+    "\n",
+    "print_tshirt('M', 'HEY DUMMY')\n",
+    "print_tshirt(text= 'M', size = 'HEY DUMMY')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 359,
+   "id": "783ebf47-1b21-4b7b-a086-db5f7cc55b64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you will get M size tshirt with text: HEY DUMMY\n",
+      "you will get L size tshirt with text: I love Py\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_tshirt(size = 'L', text = 'I love Py'):\n",
+    "    print(f'you will get {size} size tshirt with text: {text}')\n",
+    "\n",
+    "print_tshirt('M', 'HEY DUMMY')\n",
+    "print_tshirt()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f807b0cc-9e3f-4cc7-8f52-059e384266ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#8.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "id": "979e0990-c261-42b0-ab45-0485825c5ff9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'artist_name': 'lol', 'album_title': 'kek'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def make_album(artist_name, album_title, tracks_nums=None):\n",
+    "    album = {\"artist_name\": artist_name, \"album_title\": album_title}\n",
+    "    if tracks_nums:\n",
+    "        album['tracks_nums'] = tracks_nums\n",
+    "    return album\n",
+    "print(make_album('lol', 'kek'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "id": "f00666c7-670d-48a9-b158-a3265139cf69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please type artist name or q for exit Post Malone\n",
+      "Please type album title Stoney\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'artist_name': 'Post Malone', 'album_title': 'Stoney'}\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please type artist name or q for exit B&B\n",
+      "Please type album title Posty\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'artist_name': 'B&B', 'album_title': 'Posty'}\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Please type artist name or q for exit q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'artist_name': 'Post Malone', 'album_title': 'Stoney'}, {'artist_name': 'B&B', 'album_title': 'Posty'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "albums = []\n",
+    "while True: \n",
+    "    artist = input('Please type artist name or q for exit')\n",
+    "    if artist == 'q':\n",
+    "        break\n",
+    "    title = input('Please type album title')\n",
+    "    album = make_album(artist,title)\n",
+    "    albums.append(album)\n",
+    "    print(album)\n",
+    "\n",
+    "print(albums)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
+   "id": "f272898d-1310-4b1d-89ba-f3be5611f1e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#8.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 436,
+   "id": "4874a57c-2b4f-4bb2-9c10-5f45a67ba0e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages = ['hello', 'how are you', 'what is new', 'hehehe']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 438,
+   "id": "8133b272-ef67-4b8e-a191-ed7f21615cb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "send_messages = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 440,
+   "id": "eaf51d50-1418-4406-968f-b50b0b68dc83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_messages(msgs_list):\n",
+    "    archived_messages = messages[:]\n",
+    "    while messages:\n",
+    "        msg = messages.pop(0)\n",
+    "        send_messages.append(msg)\n",
+    "        print(msg)\n",
+    "\n",
+    "    print(send_messages, 'messages')\n",
+    "    print(messages, 'messages')\n",
+    "    print(archived_messages, 'archived')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 442,
+   "id": "45dba575-e9d5-4782-9ee8-6acb673e34fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "how are you\n",
+      "what is new\n",
+      "hehehe\n",
+      "['hello', 'how are you', 'what is new', 'hehehe'] messages\n",
+      "[] messages\n",
+      "['hello', 'how are you', 'what is new', 'hehehe'] archived\n"
+     ]
+    }
+   ],
+   "source": [
+    "show_messages(messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce0daf02-7a41-4fc3-b44f-70b37be6e0ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#9 Classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 468,
+   "id": "638af620-1091-4199-93cf-8b84e1de26a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ratatue\n",
+      "Italian\n",
+      "Ratatue  - Name\n",
+      "Italian  - Cuisine\n",
+      "0  - num served\n",
+      "restaurant Ratatue is open\n",
+      "Ratatue  - Name\n",
+      "Italian  - Cuisine\n",
+      "6  - num served\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Restaurant(): \n",
+    "    def __init__(self, r_name, cuisine_type):\n",
+    "        self.r_name = r_name\n",
+    "        self.cuisine_type = cuisine_type\n",
+    "        self.number_served = 0\n",
+    "\n",
+    "    def set_num_served(self, num):\n",
+    "        self.number_served = num\n",
+    "    def increment_num_served(self):\n",
+    "        self.number_served += 1\n",
+    "    \n",
+    "    def desctibe_r(self): \n",
+    "        print(self.r_name, ' - Name')\n",
+    "        print(self.cuisine_type, ' - Cuisine')\n",
+    "        print(self.number_served, ' - num served')\n",
+    "    def open_r(self):\n",
+    "        print(f'restaurant {self.r_name} is open')\n",
+    "\n",
+    "r1 = Restaurant('Ratatue', 'Italian')\n",
+    "\n",
+    "print(r1.r_name)\n",
+    "print(r1.cuisine_type) \n",
+    "\n",
+    "r1.desctibe_r()\n",
+    "r1.open_r()\n",
+    "\n",
+    "r1.set_num_served(5)\n",
+    "r1.increment_num_served()\n",
+    "\n",
+    "r1.desctibe_r()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 470,
+   "id": "a8844daf-f277-4de7-b5fc-a620614b1fef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class User():\n",
+    "    def __init__(self, first_name, last_name, age):\n",
+    "        self.first_name = first_name\n",
+    "        self.last_name = last_name\n",
+    "        self.age = age\n",
+    "    def describe_u(self):\n",
+    "        print('Name:', self.first_name, self.last_name)\n",
+    "        print('Age:', self.age)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 472,
+   "id": "3ff0194a-23b8-4163-926b-7373c9ab7201",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Stan Kad\n",
+      "Age: 31\n"
+     ]
+    }
+   ],
+   "source": [
+    "user1 = User('Stan', 'Kad', 31)\n",
+    "user1.describe_u()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "559d96b6-d540-4314-aa19-7ec85788ab1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#class inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 486,
+   "id": "16b630fd-a976-43fc-8bfd-f7b7b27cc442",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class IceCreamStand(Restaurant):\n",
+    "    def __init__(self, r_name, cuisine_type, flavours):\n",
+    "        super().__init__(r_name, cuisine_type)\n",
+    "        self.flavours = flavours\n",
+    "    def describe_icecream_store(self):\n",
+    "        print(self.r_name, 'r_name')\n",
+    "        print(self.cuisine_type, 'cuisine_type')\n",
+    "        print(self.flavours, 'flavours')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 490,
+   "id": "82b6259f-2d61-47a1-887e-e7c4545b88cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Andys  - Name\n",
+      "Desert  - Cuisine\n",
+      "0  - num served\n"
+     ]
+    }
+   ],
+   "source": [
+    "icecream = IceCreamStand('Andys', 'Desert', ['chocolate', 'vanilla'])\n",
+    "\n",
+    "icecream.desctibe_r()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b34b8126-378e-4d8d-9f6a-1204ed4c64bf",
    "metadata": {},
    "outputs": [],
    "source": []
